--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -22,10 +22,33 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
 
+    <script>
+
+        var stuff = "<h1> TEST1 </h1>";
+
+        function test() {
+            //var para = document.createElement("div")
+            var para = document.createElement("p");
+            var node = document.createTextNode("Hello");
+            var cardContainer = document.createElement("div");
+
+            //var card = "<div class=row> <div class=card style=width: 18rem;><img src=... class=card-img-top alt=...><div class=card-body><h5 class=card-title>Card title</h5><p class=card-text>Some quick example text to build on the card title and make up the bulk of the card's content.</p><a href=# class=btn btn-primary>Go somewhere</a></div></div></div>";
+            para.appendChild(node);
+            var element = document.getElementById("test1");
+            element.appendChild(cardContainer);
+
+
+
+        }
+
+    </script>
+
 </head>
 
 <body>
+    <div id="test1">
 
+    </div>
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
@@ -59,7 +82,8 @@
                                 <input type="email" class="form-control form-control-lg" placeholder="Search...">
                             </div>
                             <div class="col-12 col-md-3">
-                                <button type="submit" class="btn btn-block btn-lg btn-primary">Search</button>
+                                <button type="submit" class="btn btn-block btn-lg btn-primary"
+                                    onclick="test()">Search</button>
                             </div>
                         </div>
                     </form>
@@ -71,6 +95,8 @@
     <!-- Icons Grid -->
     <section class="features-icons bg-light text-center">
         <div class="container">
+
+
 
             <!-- JavaScript  -->
             <div class="row">
@@ -136,8 +162,8 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                        <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-                        <h5>Fred S.</h5>
+                        <img class="img-fluid rounded-circle mb-3" src="img/IMAGE000000.jpeg" alt="">
+                        <h5>Travis C.</h5>
                         <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of
                             super nice
                             landing pages."</p>
