--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -72,13 +72,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5">Estee Lauder</h1>
+                    <h1 class="mb-5"></h1>
                 </div>
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                     <form>
                         <div class="form-row">
                             <div class="col-12 col-md-9 mb-2 mb-md-0">
-                                <input type="email" class="form-control form-control-lg" placeholder="Search...">
+                                <input type="email" class="form-control form-control-lg" placeholder="Search for a Product...">
                             </div>
                             <div class="col-12 col-md-3">
                                 <button type="submit" class="btn btn-block btn-lg btn-primary"
