--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -43,6 +43,10 @@
             }
         }
 
+        function buttonOnClick(){
+
+        }
+
     </script>
 
 </head>
@@ -58,9 +62,9 @@
                     Product Categories
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Lip Stick</a>
+                    <a class="dropdown-item" href="#">Foundation</a>
+                    <a class="dropdown-item" href="#">Eye Shadow</a>
                 </div>
             </div>
         </div>
