--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -24,8 +24,6 @@
 
     <script>
 
-
-
         function test() {
             alert("Start of Function");
 
@@ -78,7 +76,8 @@
                     <form>
                         <div class="form-row">
                             <div class="col-12 col-md-9 mb-2 mb-md-0">
-                                <input type="email" class="form-control form-control-lg" placeholder="Search for a Product...">
+                                <input type="email" class="form-control form-control-lg"
+                                    placeholder="Search for a Product...">
                             </div>
                             <div class="col-12 col-md-3">
                                 <button type="submit" class="btn btn-block btn-lg btn-primary"
