--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -41,7 +41,7 @@
             }
         }
 
-        function buttonOnClick(){
+        function buttonOnClick() {
 
         }
 
@@ -87,6 +87,11 @@
                                 <button type="submit" class="btn btn-block btn-lg btn-primary"
                                     onclick="test()">Search</button>
                             </div>
+                        </div>
+                        <div class="brn-group" role="group" aria-label="Basic example">
+                            <button type="button" class="btn btn-secondary">Lip Stick</button>
+                            <button type="button" class="btn btn-secondary">Foundation</button>
+                            <button type="button" class="btn btn-secondary">Eye Shadow</button>
                         </div>
                     </form>
                 </div>
