--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -29,11 +29,11 @@
 
             var container = document.getElementById("row1");
 
-                var el = document.createElement("div");
-                el.className = "card";
-                el.id = "card" + i;
-                el.innerHTML = "ok";
-                container.append(el);
+            var el = document.createElement("div");
+            el.className = "card";
+            el.id = "card" + i;
+            el.innerHTML = "ok";
+            container.append(el);
         }
 
 
@@ -43,7 +43,7 @@
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-light bg-light static-top">
+    <nav class="navbar sticky-top navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">Estee Lauder</a>
             <div class="dropdown">
@@ -59,6 +59,7 @@
             </div>
         </div>
     </nav>
+
 
     <!-- Masthead -->
     <header class="masthead text-white text-center">
@@ -120,120 +121,122 @@
                 </div>
             </div>
 
-    <!-- Testimonials -->
-    <section class="testimonials text-center bg-light">
-        <div class="container">
-            <h2 class="mb-5">What people are saying...</h2>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                        <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-                        <h5>Margaret E.</h5>
-                        <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                        <img class="img-fluid rounded-circle mb-3" src="img/IMAGE000000.jpeg" alt="">
-                        <h5>Travis C.</h5>
-                        <p class="font-weight-light mb-0">"Estee Lauder is amazing. I've been using their facial cream lots and its
-                            super nice
-                            landing pages."</p>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                        <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-                        <h5>Sarah W.</h5>
-                        <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to
-                            us!"</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Call to Action -->
-    <section class="call-to-action text-white text-center">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-9 mx-auto">
-                    <h2 class="mb-4"></h2>
-                </div>
-                <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-                    <form>
-                        <div class="form-row">
-                            <div class="col-12 col-md-9 mb-2 mb-md-0">
-                                <input type="email" class="form-control form-control-lg"
-                                    placeholder="Enter your email...">
-                            </div>
-                            <div class="col-12 col-md-3">
-                                <button type="submit" class="btn btn-block btn-lg btn-primary">Donate</button>
+            <!-- Testimonials -->
+            <section class="testimonials text-center bg-light">
+                <div class="container">
+                    <h2 class="mb-5">What people are saying...</h2>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                                <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+                                <h5>Margaret E.</h5>
+                                <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
                             </div>
                         </div>
-                    </form>
+                        <div class="col-lg-4">
+                            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                                <img class="img-fluid rounded-circle mb-3" src="img/IMAGE000000.jpeg" alt="">
+                                <h5>Travis C.</h5>
+                                <p class="font-weight-light mb-0">"Estee Lauder is amazing. I've been using their facial
+                                    cream lots and its
+                                    super nice
+                                    landing pages."</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                                <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+                                <h5>Sarah W.</h5>
+                                <p class="font-weight-light mb-0">"Thanks so much for making these free resources
+                                    available to
+                                    us!"</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </section>
+            </section>
 
-    <!-- Footer -->
-    <footer class="footer bg-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-                    <ul class="list-inline mb-2">
-                        <li class="list-inline-item">
-                            <a href="#">About</a>
-                        </li>
-                        <li class="list-inline-item">&sdot;</li>
-                        <li class="list-inline-item">
-                            <a href="#">Contact</a>
-                        </li>
-                        <li class="list-inline-item">&sdot;</li>
-                        <li class="list-inline-item">
-                            <a href="#">Terms of Use</a>
-                        </li>
-                        <li class="list-inline-item">&sdot;</li>
-                        <li class="list-inline-item">
-                            <a href="#">Privacy Policy</a>
-                        </li>
-                    </ul>
-                    <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
+            <!-- Call to Action -->
+            <section class="call-to-action text-white text-center">
+                <div class="overlay"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-9 mx-auto">
+                            <h2 class="mb-4"></h2>
+                        </div>
+                        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                            <form>
+                                <div class="form-row">
+                                    <div class="col-12 col-md-9 mb-2 mb-md-0">
+                                        <input type="email" class="form-control form-control-lg"
+                                            placeholder="Enter your email...">
+                                    </div>
+                                    <div class="col-12 col-md-3">
+                                        <button type="submit" class="btn btn-block btn-lg btn-primary">Donate</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item mr-3">
-                            <a href="#">
-                                <i class="fab fa-facebook fa-2x fa-fw"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item mr-3">
-                            <a href="#">
-                                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <i class="fab fa-instagram fa-2x fa-fw"></i>
-                            </a>
-                        </li>
-                    </ul>
+            </section>
+
+            <!-- Footer -->
+            <footer class="footer bg-light">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+                            <ul class="list-inline mb-2">
+                                <li class="list-inline-item">
+                                    <a href="#">About</a>
+                                </li>
+                                <li class="list-inline-item">&sdot;</li>
+                                <li class="list-inline-item">
+                                    <a href="#">Contact</a>
+                                </li>
+                                <li class="list-inline-item">&sdot;</li>
+                                <li class="list-inline-item">
+                                    <a href="#">Terms of Use</a>
+                                </li>
+                                <li class="list-inline-item">&sdot;</li>
+                                <li class="list-inline-item">
+                                    <a href="#">Privacy Policy</a>
+                                </li>
+                            </ul>
+                            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
+                        </div>
+                        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+                            <ul class="list-inline mb-0">
+                                <li class="list-inline-item mr-3">
+                                    <a href="#">
+                                        <i class="fab fa-facebook fa-2x fa-fw"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item mr-3">
+                                    <a href="#">
+                                        <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-instagram fa-2x fa-fw"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </footer>
+            </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+            <!-- Bootstrap core JavaScript -->
+            <script src="vendor/jquery/jquery.min.js"></script>
+            <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+            <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+            <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
-    <!-- Load our React component. -->
-    <script src="like_button.js"></script>
+            <!-- Load our React component. -->
+            <script src="like_button.js"></script>
 
 </body>
 
