--- a/UI-UX/runjava.html
+++ b/UI-UX/runjava.html
@@ -5,6 +5,8 @@
 <body>
 
 <form action="runjava.html" method="post">
+    <input type="text" name="h" >
+    <input type="text" name="b" >
     <input type="submit">
 </form>
 </body>
