--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -108,32 +108,142 @@
 
     <!-- Icons Grid -->
     <section class="features-icons bg-light text-center">
-        <div class="container">
+      <div class="container">
 
-            <div id="row1" class=row>
-                <div class="col-lg-4" id=11>
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's
-                                content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+          <div id="row1" class=row>
+              <div class="col-lg-4" id=11>
+                  <div class="card card_lip">
+                      <img src="img/eyeshadow1.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                              of
+                              the card's
+                              content.</p>
+                          <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+                      </div>
 
-                    </div>
-                </div>
-                <div class="col-lg-4" id=12>
-                    <div class="card">
+                  </div>
+              </div>
+              <div class="col-lg-4" id=12>
+                  <div class="card card_lip">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+                      </div>
 
-                    </div>
-                </div>
-                <div class="col-lg-4" id=13>
+                  </div>
+              </div>
+              <div class="col-lg-4" id=13>
+                <div class= "card card_lip">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                        of
+                        the card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
 
-                </div>
-            </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="row1" class=row>
+          <div class="col-lg-4" id=11>
+              <div class="card card_fon">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                          of
+                          the card's
+                          content.</p>
+                      <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+                  </div>
+
+              </div>
+          </div>
+          <div class="col-lg-4" id=12>
+              <div class="card card_fon">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                        of
+                        the card's
+                        content.</p>
+                    <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+                  </div>
+
+              </div>
+          </div>
+          <div class="col-lg-4" id=13>
+            <div class= "card card_fon">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                    of
+                    the card's
+                    content.</p>
+                <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="row1" class=row>
+      <div class="col-lg-4" id=11>
+          <div class="card card_eye">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                      of
+                      the card's
+                      content.</p>
+                  <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+              </div>
+
+          </div>
+      </div>
+      <div class="col-lg-4" id=12>
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body card_eye">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                    of
+                    the card's
+                    content.</p>
+                <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+              </div>
+
+          </div>
+      </div>
+      <div class="col-lg-4" id=13>
+        <div class= "card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body card_eye">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                of
+                the card's
+                content.</p>
+            <a href="#" class="btn btn-primary" onclick="location.href = 'product.html'">Go somewhere</a>
+
+      </div>
+  </div>
+</div>
+</div>
 
             <!-- Testimonials -->
             <section class="testimonials text-center bg-light">
