--- a/UI-UX/index.html
+++ b/UI-UX/index.html
@@ -304,7 +304,7 @@
             </section>
 
             <!-- Footer -->
-            <footer class="footer bg-light">
+            <footer class="footer-fluid bg-light">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
@@ -349,6 +349,7 @@
                     </div>
                 </div>
             </footer>
+
 
             <!-- Bootstrap core JavaScript -->
             <script src="vendor/jquery/jquery.min.js"></script>
